# VNT-WIN10

./: README.md  pubspec.yaml
.github/workflows/: build.yml
lib/: config_manager.dart  data_persistence.dart  main.dart  network_config.dart  network_config_input_page.dart  system_tray_manager.dart  window_manager.dart
lib/intranet/: intranet_config.dart  intranet_manager.dart  intranet_settings_widget.dart
lib/pages/: config_list_page.dart  dashboard_page.dart  intranet_page.dart  intranet_webview_page.dart  main_navigation_shell.dart  room_page.dart  settings_page.dart  webview_window_page.dart
lib/src/rust/: frb_generated.dart
lib/src/rust/api/: vnt_api.dart
lib/utils/: log_utils.dart
lib/vnt/: vnt_manager.dart
lib/widgets/: color_changing_button.dart  custom_title_bar.dart
rust/: Cargo.toml  cargokit.yaml
rust/src/: frb_generated.rs
rust/src/api/: vnt_api.rs
windows/runner/: CMakeLists.txt  flutter_window.cpp
